[gd_scene load_steps=8 format=2]

[ext_resource path="res://models/Fist.obj" type="ArrayMesh" id=1]
[ext_resource path="res://sounds/RevolverShoot.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/Weapons/GenericMelee.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "transform"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0.5, 1, 0, -0.0178281, 0.00393152, 0.0147475, 0, 0, 0.999891, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1 )

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 0, 0 )
spread = 58.35
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 112.7
angle = 720.0
angle_random = 1.0
hue_variation = 0.6
anim_offset = 1.0

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0, 1, 0.647059, 1 )

[sub_resource type="PrismMesh" id=5]
material = SubResource( 4 )
size = Vector3( 0.5, 0.5, 0.25 )

[node name="Fist" type="Spatial"]
script = ExtResource( 3 )
weapon_name = "Fist"
recover_time = 0.5
active_time = 0.3
minimum_velocity = 10.0

[node name="BulletFirePosition" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -5 )
collision_mask = 124
collide_with_areas = true

[node name="Model" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )

[node name="RecoverTimer" type="Timer" parent="."]

[node name="ActiveTimer" type="Timer" parent="."]

[node name="Animations" type="AnimationPlayer" parent="."]
root_node = NodePath("../Model")
anims/Idle = SubResource( 2 )

[node name="SwingTrail" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.896998 )
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
randomness = 1.0
fract_delta = false
visibility_aabb = AABB( -5.12087, -2.53806, -4.13646, 10.2417, 5.07613, 8.27292 )
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="FireSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.11867 )
stream = ExtResource( 2 )
unit_db = 8.0
max_db = 6.0
